tests/baselines/reference/numLit.errors.txt
==== tests/cases/compiler/numLit.ts (2 errors) ====
    1..toString();
    1.0.toString();
    1.toString();
      ~~~~~~~~
!!! error TS1005: ';' expected.
      ~~~~~~~~
!!! error TS2095: Could not find symbol 'toString'.
    1.+2.0 + 3. ;